--- a/bogdansko_frontend/src/app/dashboard/DashboardPage.css
+++ b/bogdansko_frontend/src/app/dashboard/DashboardPage.css
@@ -41,6 +41,7 @@ body {
   align-items: center;
   padding: 14px;
   border-bottom: 1px solid #dee2e6;
+  /* max-height: 40px; */
 }
 
 .drink button {
