--- a/bogdansko_frontend/src/app/menu/[id]/CategoryDetails.css
+++ b/bogdansko_frontend/src/app/menu/[id]/CategoryDetails.css
@@ -10,6 +10,7 @@
   padding-top: 0px;
   padding-bottom: 10px;
   color: #dcf2f1;
+  margin-top: 20px;
 }
 
 .categoryDetails {
@@ -37,6 +38,7 @@
 .categoryTableDrinks {
   display: flex;
   flex-direction: row;
+  padding: 5px;
 }
 
 .categoryTableDrinks h3 {
@@ -55,13 +57,15 @@
 
 .coctailCategory{
   display: flex;
-  flex-direction: row-reverse;
+  flex-direction: column-reverse;
   align-items: center;
+  margin-bottom: 20px;
+
 }
 .coctelCategoryPrices{
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: centar;
 }
 .categoryDetails p {
   font-size: 12px;
@@ -75,8 +79,9 @@
 }
 
 .coctailCategory:first-child p {
-  text-align: right;
-  word-wrap: break-word; /* Allow words to break */
+  text-align: center;
+  word-wrap: break-word; 
+  padding: 3px;
 
   
 }
