--- a/bogdansko_frontend/src/Components/Footer/Footer.module.css
+++ b/bogdansko_frontend/src/Components/Footer/Footer.module.css
@@ -1,6 +1,6 @@
 .footerWrapper {
-  background-color: #285550;
-  color: #fff;
+  background-color: #1e272e;
+  color: white;
     padding: 20px;
     text-align: center;
   }
