--- a/bogdansko_frontend/src/Components/Header/Header.css
+++ b/bogdansko_frontend/src/Components/Header/Header.css
@@ -2,8 +2,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-    background-color: #285550;
-    color: #fff;
+    background-color: #1e272e;
+    color: white;
     padding: 20px;
     text-align: center;
   }
