--- a/bogdansko_frontend/src/app/menu/MenuPage.css
+++ b/bogdansko_frontend/src/app/menu/MenuPage.css
@@ -10,22 +10,49 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 30px;
   margin-bottom: 0px;
   color: white;
-  
+  z-index: 0;
+  position: relative;
+}
+.headingName{
+  margin-top: 30px;
+  width: 200px;
+  height: 110px;
+  background-color: #ecf0f1;
+  color: black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+    border-top-left-radius: 30px;
+  border-top-right-radius: 30px;
+  opacity: 0.65;
+  margin-top: 50px;
+}
+.headingName h2{
+  font-size: 35px;
+  font-weight: 100;
+  margin-top: 10px;
+}
+.coffeeImage img {
+  width: 400px;
+  position: absolute;
+  height: 200px;
+  z-index: 0;
+  object-fit: cover;
 }
 
 .menuPageWrapper {
-  background: linear-gradient(to bottom, #163136, #17292c);
 }
 
 .categoriesWrapper {
-  background: linear-gradient(to bottom, #285550, #1c3b38);
+  background-color: #ecf0f1;
   border-top-left-radius: 36px;
   border-top-right-radius: 36px;
-  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   padding: 30px;
+  position: relative;
+  z-index: 0;
 }
 
 .oneCategorieCart {
@@ -36,7 +63,7 @@
 }
 
 .categorieTitle {
-  background: linear-gradient(to left, #101d1f, #34494d);
+  background-color: #1e272e;
   min-width: 300px;
   height: 45px;
   text-align: center;
