--- a/bogdansko_frontend/src/app/menu/MenuPage.css
+++ b/bogdansko_frontend/src/app/menu/MenuPage.css
@@ -18,24 +18,21 @@
 .headingName{
   margin-top: 30px;
   width: 200px;
-  height: 110px;
-  background-color: #ecf0f1;
-  color: black;
+  height:130px;
+  color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
     border-top-left-radius: 30px;
   border-top-right-radius: 30px;
-  opacity: 0.65;
   margin-top: 50px;
 }
 .headingName h2{
-  font-size: 35px;
-  font-weight: 100;
+  font-size: 24px;
   margin-top: 10px;
 }
 .coffeeImage img {
-  width: 400px;
+  width: 390px;
   position: absolute;
   height: 200px;
   z-index: 0;
@@ -43,7 +40,7 @@
 }
 
 .categoriesWrapper {
-  background-color: #ecf0f1;
+  background: linear-gradient(to top, #dfe6e9, #d6e2eb);
   border-top-left-radius: 36px;
   border-top-right-radius: 36px;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
@@ -60,7 +57,7 @@
 }
 
 .categorieTitle {
-  background-color: #1e272e;
+  background: linear-gradient(to right, #ffffff, #dfe6e9);
   min-width: 300px;
   height: 45px;
   text-align: center;
@@ -69,7 +66,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  color: white;
+  color: black;
+  box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
 }
 
 .categoriesWrapper img {
@@ -78,6 +76,7 @@
   max-height: 120px;
   border-bottom-left-radius: 32px;
   border-bottom-right-radius: 32px;
+  box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
 }
 
 .menuTableWithPrices {
