--- a/bogdansko_frontend/src/app/menu/[id]/CategoryDetails.css
+++ b/bogdansko_frontend/src/app/menu/[id]/CategoryDetails.css
@@ -1,132 +1,21 @@
+/* Global styles */
+body {
+  margin: 0;
+  padding: 0;
+}
+
+/* Page container */
 .categoryDetailsPageWrapper {
   background: linear-gradient(to bottom, #163136, #17292c);
 }
 
-.menuItemHeader {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 50px;
-  padding-top: 0px;
-  padding-bottom: 0px;
-  color: #dcf2f1;
-  margin-top: 20px;
-  position: relative;
-  padding-top: 0px;
-  margin-top: 0px;
-  height: 160px;
-  justify-content: flex-end;
-}
-.menuItemHeadingName{
-  display: flex;
-  flex-direction: column;
-  margin-top: 30px;
-  width: 200px;
-  height: 110px;
-  color: white;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-    border-top-left-radius: 30px;
-  border-top-right-radius: 30px;
-  margin-top: 50px;
-}
-.menuItemHeadingName h2 {
-  margin-top: 13px;
-}
-.categoryName{
-  text-align: center;
-  color: white;
-  padding: 15px;
-}
-.mainHeader{
+/* Header */
+.mainHeader {
   display: flex;
 }
-.categoryDetails {
-  background-color: #ecf0f1;
-  border-top-left-radius: 36px;
-  border-top-right-radius: 36px;
-  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
-  padding: 30px;  
-  min-height: 80vh;
-  position: relative;
-  z-index: 0;
-}
 
-.oneMenuTableCategory {
-  display: flex;
-  flex-direction: column;
-  color: #93ac93;
-  padding: 10px;
-  margin-bottom: 72px;
-  /* align-items: center; */
-}
-
-.oneMenuTableCategory h3 {
-  padding: 5px;
-  font-weight: 500;
-}
-
-.categoryTableDrinks {
-  display: flex;
-    flex-direction: row;
-    padding: 5px;
-    justify-content: space-between;
-    color: black;
-}
-
-.categoryTableDrinks h3 {
-  padding: 5px;
-  color: black;
-}
-
-.categoryTableDrinks p {
-  margin-top: 5px;
-  font-size: 1.2rem;
-  color:black;
-}
-
-.headerWrapper {
-  display: none;
-}
-
-.coctailCategory{
-  display: flex;
-  flex-direction: column-reverse;
-  align-items: center;
-  margin-bottom: 20px;
-
-}
-.coctelCategoryPrices{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-}
-.categoryDetails p {
-  font-size: 12px;
-}
-
-.coctelCategoryPrices h3{
-  font-size: 15px;
-  color: black;
-  margin-left: 0;
-  padding: 0;
-}
-
-.coctailCategory:first-child p {
-  text-align: center;
-  word-wrap: break-word; 
-  padding: 3px;
-
-  
-}
-
-.coctelCategoryPrices p {
-  text-align: left;
-}
-
-.backButton{
+/* Back button */
+.backButton {
   padding: 10px;
   display: none;
 }
@@ -137,6 +26,124 @@
   width: 30px;
 }
 
+/* Menu Item Header */
+.menuItemHeader {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 50px;
+  padding-top: 0;
+  padding-bottom: 0;
+  color: #dcf2f1;
+  margin-top: 20px;
+  position: relative;
+  padding-top: 0;
+  margin-top: 0;
+  height: 160px;
+  justify-content: flex-end;
+}
+
+/* Menu Item Heading Name */
+.menuItemHeadingName {
+  display: flex;
+  flex-direction: column;
+  margin-top: 30px;
+  width: 200px;
+  height: 110px;
+  color: white;
+  align-items: center;
+  border-top-left-radius: 30px;
+  border-top-right-radius: 30px;
+  margin-top: 50px;
+}
+
+.menuItemHeadingName h2 {
+  margin-top: 13px;
+}
+
+/* Category Details Container */
+.categoryDetails {
+  background-color: #ecf0f1;
+  border-top-left-radius: 36px;
+  border-top-right-radius: 36px;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+  padding: 30px;
+  min-height: 80vh;
+  position: relative;
+  z-index: 0;
+}
+
+/* Drinks Category */
+.oneMenuTableCategory {
+  display: flex;
+  flex-direction: column;
+  color: #93ac93;
+  padding: 10px;
+  margin-bottom: 72px;
+}
+
+.oneMenuTableCategory h3 {
+  padding: 5px;
+  font-weight: 500;
+}
+
+/* Drinks in Category */
+.categoryTableDrinks {
+  display: flex;
+  flex-direction: row;
+  padding: 5px;
+  justify-content: space-between;
+  color: black;
+}
+
+.categoryTableDrinks h3 {
+  padding: 5px;
+  color: black;
+}
+
+.categoryTableDrinks p {
+  margin-top: 5px;
+  font-size: 1.2rem;
+  color: black;
+}
+
+/* Cocktail Category */
+.coctailCategory {
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.coctelCategoryPrices {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.coctailCategoryPrices h3 {
+  font-size: 15px;
+  color: black;
+  margin-left: 0;
+  padding: 0;
+}
+
+/* Additional styles for specific elements */
+.categoryDetails p {
+  font-size: 12px;
+}
+
+.coctailCategory:first-child p {
+  text-align: center;
+  word-wrap: break-word;
+  padding: 3px;
+}
+
+.coctelCategoryPrices p {
+  text-align: left;
+}
+
+/* Coffee Image */
 .coffeeImage img {
   width: 390px;
   position: absolute;
@@ -145,7 +152,8 @@
   object-fit: cover;
 }
 
-.coctailImage{
+/* Cocktail Image */
+.coctailImage {
   width: 230px;
   border-radius: 12px;
 }
