--- a/bogdansko_frontend/src/app/menu/[id]/CategoryDetails.css
+++ b/bogdansko_frontend/src/app/menu/[id]/CategoryDetails.css
@@ -71,6 +71,8 @@ body {
   min-height: 80vh;
   position: relative;
   z-index: 0;
+  display: flex;
+  justify-content: center;
 }
 
 /* Drinks Category */
