--- a/bogdansko_frontend/src/app/dashboard/DashboardPage.css
+++ b/bogdansko_frontend/src/app/dashboard/DashboardPage.css
@@ -105,3 +105,101 @@ body {
   border: 1px solid #ced4da;
   border-radius: 5px;
 }
+
+.editMenuModalWrapper{
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.heading {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 0px;
+  color: white;
+  z-index: 0;
+  position: relative;
+}
+.headingName{
+  margin-top: 30px;
+  width: 200px;
+  height:130px;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+    border-top-left-radius: 30px;
+  border-top-right-radius: 30px;
+  margin-top: 50px;
+}
+.headingName h2{
+  font-size: 24px;
+  margin-top: 10px;
+}
+.coffeeImage img {
+  width: 360px;
+  position: absolute;
+  height: 210px;
+  z-index: 0;
+  object-fit: cover;
+}
+
+.categoriesWrapper {
+  border-top-left-radius: 36px;
+  border-top-right-radius: 36px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  padding: 30px;
+  position: relative;
+  z-index: 0;
+}
+
+.oneCategorieCart {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 50px;
+}
+
+.categorieTitle {
+  min-width: 300px;
+  height: 45px;
+  text-align: center;
+  border-top-left-radius: 32px;
+  border-top-right-radius: 32px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: black;
+  box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
+}
+
+.categoriesWrapper img {
+  min-width: 300px;
+  object-fit: cover;
+  max-height: 120px;
+  border-bottom-left-radius: 32px;
+  border-bottom-right-radius: 32px;
+  box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
+}
+
+.rightSideEditMenu{
+  height: 900px;
+}
+
+.editSettingWrapper{
+  font-size: 20px;
+}
+
+.menuBackgorundColor{
+  margin-bottom: 100px;
+}
+
+.categoryTitleColor{
+  margin-bottom: 100px;
+}
+
+.ant-color-picker-color-block-inner{
+  min-width: 50px;
+  min-height: 50px;
+}
