--- a/bogdansko_frontend/src/Components/Header/Header.css
+++ b/bogdansko_frontend/src/Components/Header/Header.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-    background-color: #285550;
+    background-color: #343a40;
     color: white;
     padding: 20px;
     text-align: center;
