--- a/bogdansko_frontend/src/app/dashboard/DashboardPage.css
+++ b/bogdansko_frontend/src/app/dashboard/DashboardPage.css
@@ -23,11 +23,7 @@ body {
 }
 
 .category h2 {
-  background-color: #343a40;
-  color: #fff;
-  padding: 16px;
   font-size: 1.5em;
-  border-radius: 8px 8px 0 0;
 }
 
 .drinksWrapper {
@@ -57,14 +53,12 @@ body {
   display: flex;
   flex-direction: row;
   gap: 10px;
-  margin-top: 10px;
   max-height: 30px;
 }
 
 .addNewDrink input:nth-child(1) {
   border-radius: 4px;
   border: 1px solid #ced4da;
-  margin-left: 5px;
 }
 
 .addNewDrink button {
@@ -83,9 +77,11 @@ body {
 
 .editDrinkWrapper {
   display: flex;
+  align-items: center;
 }
 .editDrinkWrapper input:nth-child(2) {
   max-width: 50px;
+  max-height: 30px;
   margin-left: 5px;
   margin-right: 5px;
 }
@@ -106,7 +102,7 @@ body {
   border-radius: 5px;
 }
 
-.editMenuModalWrapper{
+.editMenuModalWrapper {
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -121,19 +117,19 @@ body {
   z-index: 0;
   position: relative;
 }
-.headingName{
+.headingName {
   margin-top: 30px;
   width: 200px;
-  height:130px;
+  height: 130px;
   color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
-    border-top-left-radius: 30px;
+  border-top-left-radius: 30px;
   border-top-right-radius: 30px;
   margin-top: 50px;
 }
-.headingName h2{
+.headingName h2 {
   font-size: 24px;
   margin-top: 10px;
 }
@@ -148,7 +144,9 @@ body {
 .categoriesWrapper {
   border-top-left-radius: 36px;
   border-top-right-radius: 36px;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   padding: 30px;
   position: relative;
   z-index: 0;
@@ -183,23 +181,44 @@ body {
   box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
 }
 
-.rightSideEditMenu{
+.rightSideEditMenu {
   height: 900px;
 }
 
-.editSettingWrapper{
+.editSettingWrapper {
   font-size: 20px;
+  margin-top: 10px;
 }
 
-.menuBackgorundColor{
-  margin-bottom: 100px;
+.menuBackgorundColor {
+  margin-bottom: 50px;
 }
 
-.categoryTitleColor{
-  margin-bottom: 100px;
+.categoryTitleColor {
+  margin-bottom: 50px;
 }
 
-.ant-color-picker-color-block-inner{
-  min-width: 50px;
-  min-height: 50px;
+.deleteCategory {
+  background-color: #343a40;
+  color: #fff;
+  padding: 16px;
+  border-radius: 8px 8px 0 0;
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  justify-content: space-between;
 }
+
+.createProductField {
+  padding: 5px;
+}
+
+.createCategoryField {
+  padding: 10px;
+  padding-left: 0;
+}
+
+.ant-modal-body {
+  max-height: 87vh;
+}
+
