--- a/bogdansko_frontend/src/app/menu/MenuPage.css
+++ b/bogdansko_frontend/src/app/menu/MenuPage.css
@@ -18,6 +18,8 @@
   color: white;
   z-index: 0;
   position: relative;
+      height: 330px;
+
 }
 .headingName{
   margin-top: 30px;
@@ -29,16 +31,25 @@
   align-items: center;
     border-top-left-radius: 30px;
   border-top-right-radius: 30px;
-  margin-top: 50px;
+  margin-top: 220px;
+  font-weight: 900;
+
 }
 .headingName h2{
-  font-size: 24px;
+  font-size: 29px;
   margin-top: 10px;
+  font-weight: 900;
+}
+.headingName h3{
+  font-size: 20px;
+  margin-top: 10px;
+  font-weight: 900;
+  margin-top: 0;
 }
 .coffeeImage img {
   width: 100%;
   position: absolute;
-  height: 200px;
+  min-height: 430px;
   z-index: 0;
   object-fit: cover;
 }
@@ -50,6 +61,9 @@
   padding: 30px;
   position: relative;
   z-index: 0;
+  border-radius: 54px 55px 10px 10px;
+  -webkit-border-radius: 54px 55px 10px 10px;
+  -moz-border-radius: 54px 55px 10px 10px;
 }
 
 .oneCategorieCart {
