--- a/bogdansko_frontend/src/app/menu/[id]/CategoryDetails.css
+++ b/bogdansko_frontend/src/app/menu/[id]/CategoryDetails.css
@@ -38,7 +38,7 @@ body {
   position: relative;
   padding-top: 0;
   margin-top: 0;
-  height: 160px;
+  height: 200px;
   justify-content: flex-end;
 }
 
@@ -53,23 +53,30 @@ body {
   border-top-left-radius: 30px;
   border-top-right-radius: 30px;
   margin-top: 50px;
+  font-size: 23px;
 }
 
 .menuItemHeadingName h2 {
   margin-top: 13px;
 }
-
+.menuItemHeadingName h3 {
+  font-size: 16px;
+}
 .categoryDetails {
   background-color: #ecf0f1;
   border-top-left-radius: 36px;
   border-top-right-radius: 36px;
   box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
-  padding: 30px;
+  padding: 18px;
   min-height: 80vh;
   position: relative;
   z-index: 0;
   display: flex;
   justify-content: center;
+  border-radius: 34px 34px 0px 0px;
+  -webkit-border-radius: 34px 34px 0px 0px;
+  -moz-border-radius: 34px 34px 0px 0px;
+
 }
 
 .oneMenuTableCategory {
@@ -79,6 +86,7 @@ body {
   padding: 10px;
   margin-bottom: 72px;
   width: 100%;
+  text-align: center;
 }
 
 .oneMenuTableCategory h3 {
@@ -149,9 +157,9 @@ body {
 }
 
 .coffeeImage img {
-  width: 390px;
+  width: 100%;
   position: absolute;
-  height: 230px;
+  height: 200px;
   z-index: 0;
   object-fit: cover;
 }
