--- a/bogdansko_frontend/src/app/[slog]/menu/MenuPage.css
+++ b/bogdansko_frontend/src/app/[slog]/menu/MenuPage.css
@@ -64,6 +64,7 @@
   border-radius: 54px 55px 10px 10px;
   -webkit-border-radius: 54px 55px 10px 10px;
   -moz-border-radius: 54px 55px 10px 10px;
+  min-height: 70vh;
 
 }
 
