--- a/bogdansko_frontend/src/Components/Header/Header.css
+++ b/bogdansko_frontend/src/Components/Header/Header.css
@@ -12,6 +12,7 @@
     font-size: 24px;
     margin-left: 10px;
     font-weight: bold;
+    text-transform: capitalize;
   }
   .headerWrapper img {
     max-width: 50px;
