--- a/bogdansko_frontend/src/app/dashboard/[id]/DashboardPage.css
+++ b/bogdansko_frontend/src/app/dashboard/[id]/DashboardPage.css
@@ -9,10 +9,15 @@ body {
 
 .drinksCategoryWrapper {
   display: flex;
-  flex-wrap: wrap;
   gap: 20px;
-  padding: 20px;
+  padding: 60px;
+  padding-top: 30px;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
+
 
 .category {
   background-color: #fff;
@@ -20,12 +25,45 @@ body {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   margin: 10px;
   width: 300px;
-  height: 100%;
-
 }
 
-.category h2 {
+.categoryHeader {
+  background-color: #2c3e50;
+  padding: 14px;
+  border-bottom: 1px solid #dee2e6;
+  justify-content: flex-end;
+  display: flex;
+  flex-direction: row-reverse;
+  border-top-right-radius: 8px;
+  border-top-left-radius: 8px;
+  align-items: center;
+}
+
+.categoryHeader h2 {
   font-size: 1.5em;
+  color: white;
+  padding: 5px;
+  margin-right: 10px;
+}
+.categoryHeader button {
+  margin-right: 3px;
+}
+
+.categoryBody {
+  max-height: 400px;
+  overflow-y: auto; 
+}
+
+.categoryBody::-webkit-scrollbar {
+  width: 0.5em;
+}
+
+.categoryBody::-webkit-scrollbar-thumb {
+  background-color: #888;
+}
+
+.categoryBody::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
 }
 
 .drinksWrapper {
@@ -39,7 +77,6 @@ body {
   align-items: center;
   padding: 14px;
   border-bottom: 1px solid #dee2e6;
-  /* max-height: 40px; */
 }
 
 .drink button {
@@ -201,14 +238,14 @@ body {
 }
 
 .deleteCategory {
-  background-color: #343a40;
+  background-color: #2c3e50;
   color: #fff;
   padding: 16px;
   border-radius: 8px 8px 0 0;
   display: flex;
   flex-direction: row-reverse;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-end
 }
 
 .deleteCategory button {
@@ -243,12 +280,12 @@ body {
   align-items: center;
   justify-content: center;
   padding: 10px;
+  margin-top: 5px;
 }
 
 .addButtons button{
   margin-left: 5px;
   max-width: 140px;
-  margin: 10px !important;
 }
 
 .createProductField img{
@@ -264,4 +301,38 @@ body {
   flex-direction: column;
   align-items: flex-start;
   padding: 1px;
+}
+
+.createCategoryFieldImage{
+  display: flex;
+  padding: 10px;
+  padding-left: 0px;
+  align-items: center;
+}
+
+.createProductImageField{
+  padding: 10px;
+  padding-left: 0px;
+  display: flex;
+  flex-direction: column;
+}
+
+.createProductInput{
+  padding: 3px;
+  margin-bottom: 10px;
+}
+
+.deleteCategoryButtons{
+  display: flex;
+  margin-left: 30px;
+}
+
+.createCategoryImg{
+  max-width: 250px;
+  border-radius: 12px;
+}
+
+.createProductImg{
+  max-width: 250px;
+  border-radius: 12px;
 }
