--- a/bogdansko_frontend/src/app/dashboard/[id]/DashboardPage.css
+++ b/bogdansko_frontend/src/app/dashboard/[id]/DashboardPage.css
@@ -345,3 +345,105 @@ body {
   max-width: 250px;
   border-radius: 12px;
 }
+
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.menuLandingPageWrapper{
+  width: 100%;
+}
+.menuPageHeader{
+  display: none;
+}
+
+.headingName{
+  display: flex;
+  align-items: center;
+}
+
+.headingName h3{
+  margin-left: 20px;
+  margin-top: 2px;
+}
+.headingName span svg {
+  font-size: 17px;
+}
+
+
+.landingPageMiddleSection {
+  width: 100%;
+  height: 560px;
+  background-image: url('https://scontent.fskp3-1.fna.fbcdn.net/v/t39.30808-6/361086482_1003088147611941_5940843451065858315_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=783fdb&_nc_ohc=xg7X41Y6I_MAX_tyCj4&_nc_ht=scontent.fskp3-1.fna&oh=00_AfD_GGbuGV87A3q2kko0cum9BvuP6zmrXgd_W8T6Uhhm8w&oe=65CE03D8');
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  background-size: cover;
+  background-position: center; 
+}
+
+
+.landingPageMiddleSection button{
+  width: 150px;
+  height: 40px;
+  border: none;
+  color: black;
+  font-weight: 600;
+  border-radius: 8px;
+  background-color: orange;
+  margin-top: 30px;
+}
+
+.landingPageMiddleSection h1{
+  font-weight: 900;
+}
+
+.landingPageMiddleSection p {
+  font-weight: 500;
+}
+
+.categoriesList {
+  max-width: 100%;
+}
+.oneCategory{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+
+}
+.categoriesList h2 {
+  padding: 15px;
+  color: #353b48;
+  margin-left: 5px;
+}
+.oneCategory img {
+  width: 170px;
+  height: 190px;
+  object-fit: cover;
+  border-radius: 16px;
+}
+
+.oneCategory h4 {
+  font-weight: 500;
+  padding: 10px;
+  padding-left: 0;
+  margin-left: 3px;
+}
+
+.categoires{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px; 
+  justify-items: center;
+}
+
+.ladningPageFooter{
+  padding: 25px;
+  text-align: center;
+  color: rgb(128, 111, 111);
+}
