--- a/bogdansko_frontend/src/app/[slog]/menu/MenuPage.css
+++ b/bogdansko_frontend/src/app/[slog]/menu/MenuPage.css
@@ -71,6 +71,7 @@
   padding: 15px;
   color: #353b48;
   margin-left: 5px;
+  padding-top: 40px;
 }
 .oneCategory img {
   width: 160px;
@@ -89,7 +90,7 @@
 .categoires{
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 20px; 
+  gap: 15px; 
   justify-items: center;
 }
 
