--- a/bogdansko_frontend/src/app/[slog]/menu/[id]/CategoryDetails.css
+++ b/bogdansko_frontend/src/app/[slog]/menu/[id]/CategoryDetails.css
@@ -91,31 +91,31 @@
 }
 
 .categoryDrinkNoImage {
-  background-color: #ffffff; /* White background color */
-  padding: 15px; /* Decrease padding for smaller screens */
+  background-color: #ffffff;
+  padding: 15px; 
   border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add a subtle shadow for depth */
-  margin-bottom: 15px; /* Decrease margin bottom for smaller screens */
-  transition: transform 0.3s ease-in-out; /* Add smooth transition */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin-bottom: 15px; 
+  transition: transform 0.3s ease-in-out;
 }
 
 .categoryDrinkNoImage:hover {
-  transform: translateY(-5px); /* Add a slight lift effect on hover */
+  transform: translateY(-5px);
 }
 
 .categoryDrinkNoImage h3 {
-  font-size: 16px; /* Decrease font size for smaller screens */
-  font-weight: 700; /* Increase font weight for emphasis */
-  color: #333333; /* Darker text color for better contrast */
-  margin-bottom: 8px; /* Decrease margin bottom for smaller screens */
+  font-size: 16px; 
+  font-weight: 700;
+  color: #333333;
+  margin-bottom: 8px;
 }
 
 .categoryDrinkNoImage p {
-  font-size: 14px; /* Decrease font size for smaller screens */
-  color: #666666; /* Slightly darker text color */
+  font-size: 14px; 
+  color: #666666;
 }
 
 .categoryDrinkNoImage p.price {
-  font-weight: 600; /* Bold font weight for price */
-  color: #20bf6b; /* Green color for price */
+  font-weight: 600; 
+  color: #20bf6b; 
 }
