--- a/bogdansko_frontend/src/app/[slog]/menu/MenuPage.css
+++ b/bogdansko_frontend/src/app/[slog]/menu/MenuPage.css
@@ -77,7 +77,7 @@
   width: 160px;
   height: 190px;
   object-fit: cover;
-  border-radius: 16px;
+  border-radius: 12px;
 }
 
 .oneCategory h4 {
@@ -98,4 +98,20 @@
   padding: 25px;
   text-align: center;
   color: rgb(128, 111, 111);
+}
+
+.oneCategory {
+  position: relative;
+  display: inline-block;
+}
+
+.categoryName {
+  position: absolute;
+  bottom: 2px;
+  left: 5px;
+  margin: 0;
+  padding: 5px;
+  color: white;
+  font-weight: 900;
+  font-size: 17px;
 }
