--- a/bogdansko_frontend/src/app/[slog]/menu/MenuPage.css
+++ b/bogdansko_frontend/src/app/[slog]/menu/MenuPage.css
@@ -112,6 +112,6 @@
   margin: 0;
   padding: 5px;
   color: white;
-  font-weight: 900;
-  font-size: 17px;
+  font-weight: bolder;
+  font-size: 18px;
 }
