--- a/bogdansko_frontend/src/app/[slog]/menu/[id]/CategoryDetails.css
+++ b/bogdansko_frontend/src/app/[slog]/menu/[id]/CategoryDetails.css
@@ -1,3 +1,6 @@
+.categoryDetailsPageWrapper{
+  background: linear-gradient(to left, #ebe7e7, #ffff);
+}
 .categoryDetailsMain{
   padding-top: 20px ;
   min-height: 80vh;
@@ -28,6 +31,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 20px;
 }
 
 .ant-tabs-nav-wrap{
